[package]
name = "udbg"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["metaworm <metaworm@outlook.com>"]
description = "udbg provides a mass of functions for implementing a binary debugger"
homepage = "https://docs.rs/udbg"
documentation = "https://docs.rs/udbg"
repository = "https://github.com/udbg/udbg-base"
include = ["/src", "README.md", "/examples"]

[features]
dbgeng = ['windows']

[dependencies]
cfg-if = '1.0'
glob = '0.3'
hex = '0.4'
log = '0.4'
spin = '0.9'
ctor = '0.1'
regex = '1.5'
pdb = '0.7'
extend = '1.1'
bitflags = '1.2'
anyhow = '1.0'
futures = '0.3'
thiserror = '1.0'
cstrptr = '0.1'
crossbeam = '0.8'
parking_lot = '0.12'
serde-value = '0.7'
derive_more = '0.99'
goblin = {version = '0.5'}
memmap = {version = '0.7.0'}
cpp_demangle = {version = '0.3'}
memoffset = {version = '0.6', features = ['unstable_const']}
serde = {version = "1.0", default-features = false, features = ['derive', 'rc', 'alloc']}
iced-x86 = {version = '1.11', default-features = false, features = ['decoder', 'intel', 'no_std']}

[target.'cfg(windows)'.dependencies]
winapi = {version = '0.3.9', features = [
    "winnt", "processthreadsapi", "psapi", "errhandlingapi", "winuser", "winbase", "fileapi",
    "memoryapi", "dbghelp", "debugapi", "ioapiset", "winerror", "stringapiset", "winnls",
    "shellapi", "winsvc", "synchapi", "wincrypt", 'softpub',
    "shellscalingapi", "sysinfoapi", "heapapi", 'tlhelp32', 'wow64apiset', "securitybaseapi"
]}
windows = {version = '0.35', features = [
    "alloc", "implement",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Management_Deployment",
    "Foundation",
    "Foundation_Collections",
    "ApplicationModel",
    "Win32_System_WinRT",
    "Win32_System_Diagnostics_Debug",
], optional = true}
ntapi = '0.3'
unicase = '2.6'
msvc-demangler = '0.9'

[target.'cfg(not(windows))'.dependencies]
nix = '0.23'
libc = '0.2'
errno = '0.2'

[target.'cfg(any(target_os="linux",target_os="android"))'.dependencies]
procfs = '0.12'

[target.'cfg(target_os="macos")'.dependencies]
mach = '0.3'
mach2 = '0.4'
libproc = '0.10'
mach_o_sys = '0.1'

[build-dependencies]
cc = '1'

[dev-dependencies]
rustyline = '9'
structopt = '0.3.8'
flexi_logger = '0.22'