[package]
name = "udbg"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["metaworm <metaworm@outlook.com>"]
description = "cross-platform library for binary debugging and memory hacking"
homepage = "https://crates.io/crates/udbg"
documentation = "https://docs.rs/udbg"
repository = "https://github.com/udbg/udbg"
include = ["/src", "README.md", "/examples"]

[features]
dbgeng = ['windows/Win32_System_Diagnostics_Debug']

[dependencies]
cfg-if = '1.0'
glob = '0.3'
hex = '0.4'
log = '0.4'
spin = '0.9'
ctor = '0.2'
regex = '1.5'
pdb = '0.8'
extend = '1.1'
anyhow = '1.0'
futures = '0.3'
thiserror = '1.0'
cstrptr = '0.1'
crossbeam = '0.8'
minidump = '0.17'
parking_lot = '0.12'
serde-value = '0.7'
derive_more = '0.99'
failed-result = '0.2'
log-error = "0.1"
goblin = {version = '~0.6'}
memmap2 = {version = '~0.5'}
cpp_demangle = {version = '0.4'}
ezlua = {version = '0.3', features = ['vendored', 'thread'], optional = true}
bitflags = {version = '2.0', features = ['serde']}
capstone = {version = '0.11', optional = true}
symbolic = {version = '12.1', features = ['demangle']}
memoffset = {version = '0.9', features = ['unstable_const']}
serde = {version = "1.0", default-features = false, features = ['derive', 'rc', 'alloc']}
iced-x86 = {version = '1.11', default-features = false, features = ['decoder', 'intel', 'std']}

[[bin]]
name = 'tracee'
path = 'src/tracee/main.rs'

[target.'cfg(windows)'.dependencies]
winapi = {version = '0.3.9', features = [
    "winnt", "processthreadsapi", "psapi", "errhandlingapi", "winuser", "winbase", "fileapi",
    "memoryapi", "dbghelp", "debugapi", "ioapiset", "winerror", "stringapiset", "winnls",
    "shellapi", "winsvc", "synchapi", "wincrypt", 'softpub',
    "shellscalingapi", "sysinfoapi", "heapapi", 'tlhelp32', 'wow64apiset', "securitybaseapi"
]}
windows = {version = '0.48', features = [
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Management_Deployment",
    "Foundation",
    "Foundation_Collections",
    "Win32_System_WinRT",
]}
ntapi = '0.4'
unicase = '2.6'
msvc-demangler = '0.9'

[target.'cfg(not(windows))'.dependencies]
nix = '0.26'
libc = '0.2'
errno = '0.3'

[target.'cfg(any(target_os="linux",target_os="android"))'.dependencies]
procfs = '0.15'

[target.'cfg(target_os="macos")'.dependencies]
mach2 = '0.4'
scroll = "0.11"
libproc = '0.13'
mach_o_sys = '0.1'

[build-dependencies]
cc = '1'

[dev-dependencies]
flexi_logger = '0.25'
tempfile = '3.6'
minidump-writer = '0.8.0'
rustyline = {version = '12'}
clap = {version = "4", features = ["derive", "env"]}
ezlua = {version = '0.3', features = ['vendored']}
